--- a/assignment2/task3/fetchDataWithanApi.html
+++ b/assignment2/task3/fetchDataWithanApi.html
@@ -72,7 +72,7 @@
   <body>
     <div class="container">
       <div class="search-container">
-        <input type="text" id="movie-title" />
+        <input type="text" id="movie-title" placeholder="Search moive" />
         <button id="search-button">Search</button>
       </div>
       <div id="movie-data"></div>
