done github issue assignment

--- a/assignment2/task2/domManupulation.html
+++ b/assignment2/task2/domManupulation.html
@@ -64,7 +64,7 @@
 
     removeChildBtn.addEventListener("click", function () {
         const children = container.children;
-       // console.log(children)
+       console.log(children)
         if (children.length > 0) {
             container.removeChild(children[children.length - 1]);
         }
